crates/service/tests/diagnostics/snapshots/features__diagnostics__typeck__else_results_folded.snap
---
source: crates/service/tests/diagnostics/typeck.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 7,
          "character": 21
        },
        "end": {
          "line": 7,
          "character": 22
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [i32, i32], found [i32] at the end"
    },
    {
      "range": {
        "start": {
          "line": 14,
          "character": 21
        },
        "end": {
          "line": 14,
          "character": 22
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [i32, i32], found [i32, f32] at the end",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 14,
                "character": 8
              },
              "end": {
                "line": 14,
                "character": 21
              }
            }
          },
          "message": "expected type `i32`, found `f32`"
        }
      ]
    },
    {
      "range": {
        "start": {
          "line": 22,
          "character": 21
        },
        "end": {
          "line": 22,
          "character": 22
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [i32, i32], found [i32, i32, i32] at the end"
    }
  ]
}
