crates/service/tests/diagnostics/snapshots/features__diagnostics__typeck__else_sequence.snap
---
source: crates/service/tests/diagnostics/typeck.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 9,
          "character": 6
        },
        "end": {
          "line": 9,
          "character": 13
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [i32, i32], found [i32, f32]",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 8,
                "character": 6
              },
              "end": {
                "line": 8,
                "character": 17
              }
            }
          },
          "message": "expected type `i32`, found `f32`"
        }
      ]
    }
  ]
}
