crates/service/tests/diagnostics/snapshots/features__diagnostics__typeck__expected_instr.snap
---
source: crates/service/tests/diagnostics/typeck.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 0,
          "character": 23
        },
        "end": {
          "line": 0,
          "character": 24
        }
      },
      "severity": 1,
      "source": "wat",
      "message": "expected instr"
    }
  ]
}
