crates/service/tests/diagnostics/snapshots/features__diagnostics__typeck__global_type_mismatch.snap
---
source: crates/service/tests/diagnostics/typeck.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 4,
          "character": 17
        },
        "end": {
          "line": 4,
          "character": 31
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected type `i32`, found `f32`"
    }
  ]
}
