crates/service/tests/diagnostics/snapshots/features__diagnostics__typeck__if_cond_incorrect.snap
---
source: crates/service/tests/diagnostics/typeck.rs
expression: response
---
{
  "kind": "full",
  "items": [
    {
      "range": {
        "start": {
          "line": 3,
          "character": 5
        },
        "end": {
          "line": 3,
          "character": 7
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [i32], found [] for the condition of `if` block"
    },
    {
      "range": {
        "start": {
          "line": 6,
          "character": 5
        },
        "end": {
          "line": 6,
          "character": 7
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [i32], found [f32] for the condition of `if` block",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 7,
                "character": 6
              },
              "end": {
                "line": 7,
                "character": 19
              }
            }
          },
          "message": "expected type `i32`, found `f32`"
        }
      ]
    },
    {
      "range": {
        "start": {
          "line": 11,
          "character": 6
        },
        "end": {
          "line": 13,
          "character": 22
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [i32, i32], found [i32, f32]",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 13,
                "character": 8
              },
              "end": {
                "line": 13,
                "character": 21
              }
            }
          },
          "message": "expected type `i32`, found `f32`"
        }
      ]
    },
    {
      "range": {
        "start": {
          "line": 19,
          "character": 13
        },
        "end": {
          "line": 19,
          "character": 14
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [], found [i32] at the end"
    },
    {
      "range": {
        "start": {
          "line": 21,
          "character": 4
        },
        "end": {
          "line": 21,
          "character": 6
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [i32], found [] for the condition of `if` block"
    },
    {
      "range": {
        "start": {
          "line": 25,
          "character": 4
        },
        "end": {
          "line": 25,
          "character": 6
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [i32], found [f32] for the condition of `if` block",
      "relatedInformation": [
        {
          "location": {
            "uri": "untitled:test",
            "range": {
              "start": {
                "line": 24,
                "character": 4
              },
              "end": {
                "line": 24,
                "character": 15
              }
            }
          },
          "message": "expected type `i32`, found `f32`"
        }
      ]
    },
    {
      "range": {
        "start": {
          "line": 31,
          "character": 7
        },
        "end": {
          "line": 31,
          "character": 8
        }
      },
      "severity": 1,
      "code": "type-check",
      "source": "wat",
      "message": "expected types [], found [i32] at the end"
    }
  ]
}
